fixed off center value labels in dashboard

--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -33,12 +33,15 @@
 
 .dashboard_label_value_wrapper {
     background: #35282a;
+    display: flex;
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     width: 240px;
     text-align: center;
     height: 42px;
     padding: 5px;
+    justify-content: center;
+    align-items: center;
 }
 
 .dashboard_subdiv_username,
